# autoteam

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: autoteam.md
.codebuddy/skills/: autoteam.md
.codex/skills/: autoteam.md
.continue/skills/: autoteam.md
.cursor/hooks/: PostToolUse.md  PreToolUse.md  UserPromptSubmit.md
.factory/skills/: autoteam.md
.github/: copilot-instructions.md  pipeline-review-todos.md
.github/hooks/: PostToolUse.md  PreToolUse.md  UserPromptSubmit.md
.github/instructions/: autoteam.instructions.md
.kiro/skills/: autoteam.md
.mastracode/hooks/: PostToolUse.md  PreToolUse.md  UserPromptSubmit.md
.openclaw/: settings.json
.openclaw/agents/: architecture.md  documentation.md  implementation.md  orchestration.md  product-planner.md  qa-quality.md  qa-security.md  qa-test.md
.openclaw/workspace/: README.md  adr.md  fix-instructions.md  interface-contracts.yaml  requirement-card.yaml
.opencode/skills/: autoteam.md
.pi/skills/: autoteam.md
commands/: autoteam-plan.md  autoteam-status.md  autoteam.md
config/: roles.example.yaml
hooks/: PostToolUse.md  PreToolUse.md  UserPromptSubmit.md
scripts/: check-status.ps1  check-status.sh  init-session.ps1  init-session.sh
skills/: autoteam.md
skills/autoteam/: SKILL.md
src/autoteam/: __init__.py  cli.py
templates/: pipeline-status.md  work-chunk.md
tests/: __init__.py  conftest.py
tests/adapters/: test_claude_adapter.py
tests/e2e/: test_review_flow.py
tests/policy/: test_judge.py
(+43 files in other folders)
